<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Updater</string>
    <string name="display_name">System updates</string>
    <string name="download_path" translatable="false">/data/lineageos_updates/</string>
    <string name="brand_name" translatable="false">LineageOS</string>
    <string name="build_date">Build date</string>
    <string name="report_issues">Report issues</string>
    <string name="security_update">Security update</string>
    <string name="show_changelog">Recent changes</string>
    <string name="download_url" translatable="false">download.lineageos.org</string>
    <string name="found_bug">Found a bug? Report it with our bug report guide:</string>
    <string name="review_updates">Check for updates and recent changes at:</string>
    <string name="export_path" translatable="false">LineageOS updates/</string>
    <string name="updater_server_url" translatable="false">https://download.lineageos.org/api/v1/{device}/{type}/{incr}</string>
    <string name="menu_changelog_url" translatable="false">https://download.lineageos.org/<xliff:g id="device_name">%1$s</xliff:g>/changes</string>
    <string name="report_issue_url" translatable="false">https://gitlab.com/LineageOS/issues/android/-/issues</string>
    <string name="verification_failed_notification">Verification failed</string>
    <string name="verifying_download_notification">Verifying update</string>
    <string name="downloading_notification">Downloading</string>
    <string name="download_paused_notification">Download paused</string>
    <string name="download_paused_error_notification">Download error</string>
    <string name="download_completed_notification">Download completed</string>
    <string name="download_starting_notification">Starting download</string>
    <string name="download_switch_confirm_title">Pause active download?</string>
    <string name="download_switch_confirm_message">Another update is currently downloading. Starting this one will pause the other.</string>
    <string name="update_failed_notification">Update failed</string>
    <string name="installation_suspended_notification">Installation suspended</string>
    <string name="new_updates_found_title">Updates available</string>
    <string name="text_download_speed">%1$s, %2$s/s</string>
    <string name="installing_update">Installing system update</string>
    <string name="installing_update_error">Install error</string>
    <string name="installing_update_finished">Update installed</string>
    <string name="finalizing_package">Finalizing package installation</string>
    <string name="preparing_ota_first_boot">Preparing for first boot</string>
    <string name="dialog_prepare_zip_message">Preliminary update preparation</string>
    <string name="dialog_battery_low_title">Low battery</string>
    <string name="dialog_battery_low_message_pct">The battery level is too low, you need at least <xliff:g id="percent_discharging">%1$d</xliff:g>%% of the battery to continue, <xliff:g id="percent_charging">%2$d</xliff:g>%% if charging.</string>
    <string name="dialog_scratch_mounted_message">
        <![CDATA[
        Please run the following commands and retry the update:\n
        • adb root\n
        • adb enable-verity\n
        • adb reboot
        ]]>
    </string>
    <string name="dialog_scratch_mounted_title">Cannot install update with OverlayFS mounted</string>
    <string name="reboot">Reboot</string>
    <string name="reboot_to_complete_update">Reboot to complete the update</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_preferences">System update preferences</string>
    <string name="preferences_summary">Sync, download and install</string>
    <string name="pref_category_background_sync">Background sync</string>
    <string name="menu_auto_updates_check">Periodically check for updates</string>
    <string name="menu_auto_updates_check_summary">Check for updates in the background</string>
    <string name="menu_auto_updates_check_interval">Check every</string>
    <string name="menu_auto_updates_check_interval_never">Never</string>
    <string name="time_unit_day">Day</string>
    <string name="time_unit_week">Week</string>
    <string name="time_unit_month">Month</string>
    <string-array name="check_interval_entries" translatable="false">
        <item>@string/time_unit_day</item>
        <item>@string/time_unit_week</item>
        <item>@string/time_unit_month</item>
    </string-array>
    <string-array name="check_interval_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="menu_next_check_time">Next check: <xliff:g id="date" example="January 1, 2026">%1$s</xliff:g> (<xliff:g id="time" example="08:30">%2$s</xliff:g>)</string>
    <string name="pref_category_download_install">Download and installation</string>
    <string name="menu_auto_delete_updates">Auto-delete updates</string>
    <string name="menu_auto_delete_updates_summary">Remove downloaded updates after installation</string>
    <string name="menu_delete_update">Delete</string>
    <string name="menu_export_update">Export update</string>
    <string name="menu_show_changelog">Show changelog</string>
    <string name="menu_metered_network_warning">Metered network warning</string>
    <string name="menu_metered_network_warning_summary">Warn before downloading over mobile data</string>
    <string name="menu_ab_perf_mode">Prioritize update process</string>
    <string name="menu_ab_perf_mode_summary">Speed up updates at the cost of device performance</string>
    <string name="menu_ab_streaming_mode">Stream updates</string>
    <string name="menu_ab_streaming_mode_summary">Install updates directly from the server without
        downloading first. Saves storage space. Disable this if you want to keep the update file
        for later reuse.</string>
    <string name="menu_update_recovery">Update recovery</string>
    <string name="menu_update_recovery_summary">Update recovery partition along with the OS</string>
    <string name="snack_updates_found">New updates found</string>
    <string name="snack_no_updates_found">No updates found</string>
    <string name="snack_updates_check_failed">The update check failed. Please check your internet connection and try again later.</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="check_internet_connection">Please check your internet connection</string>
    <string name="snack_download_failed">The download failed. Please check your internet connection and try again later.</string>
    <string name="snack_download_verification_failed">The update verification failed.</string>
    <string name="snack_download_verified">Download completed.</string>
    <string name="snack_update_not_installable">This update can\'t be installed on top of the current build.</string>
    <string name="header_android_version">Android <xliff:g id="version" example="7.1.2">%1$s</xliff:g></string>
    <string name="header_last_updates_check">Last checked: <xliff:g id="date" example="1 January 1970">%1$s</xliff:g> <xliff:g id="time" example="01:23">%2$s</xliff:g></string>
    <string name="header_last_updates_check_today">Last checked: <xliff:g id="time" example="01:23">%1$s</xliff:g></string>
    <string name="list_build_version">LineageOS <xliff:g id="version" example="23.2">%1$s</xliff:g></string>
    <string name="list_build_version_date">LineageOS <xliff:g id="version" example="23.2">%1$s</xliff:g> - <xliff:g id="date" example="January 11, 2026">%2$s</xliff:g></string>
    <string name="list_download_progress_newer"><xliff:g id="filesize_without_unit" example="12.2">%1$s</xliff:g> of <xliff:g id="filesize_without_unit" example="310 MB">%2$s</xliff:g></string>
    <string name="list_download_progress_eta_newer"><xliff:g id="filesize_without_unit" example="12.2">%1$s</xliff:g> of <xliff:g id="filesize_without_unit" example="310 MB">%2$s</xliff:g> (<xliff:g id="eta" example="3 minutes left">%3$s</xliff:g>)</string>
    <string name="list_verifying_update">Verifying update</string>
    <string name="action_download">Download</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
    <string name="action_install">Install</string>
    <string name="action_info">Info</string>
    <string name="action_delete">Delete</string>
    <string name="confirm_cancel_dialog_title">Cancel download</string>
    <string name="confirm_cancel_dialog_message">Cancel the download and delete the file?</string>
    <string name="confirm_delete_dialog_title">Delete file</string>
    <string name="confirm_delete_dialog_message">Delete the selected update file?</string>
    <string name="apply_update_dialog_title">Apply update</string>
    <string name="apply_update_dialog_message">You are about to install <xliff:g id="update_name">%1$s</xliff:g>.\n\nIf you press <xliff:g id="ok">%2$s</xliff:g>, the device will restart itself in recovery mode to install the update.\n\nNote: This feature requires a compatible Recovery or updates will need to be installed manually.</string>
    <string name="apply_update_dialog_message_ab">You are about to install <xliff:g id="update_name">%1$s</xliff:g>.\n\nIf you press <xliff:g id="ok">%2$s</xliff:g>, the device will begin installing in the background.\n\nOnce completed, you will be prompted to reboot.</string>
    <string name="apply_update_dialog_message_streaming">You are about to stream-install
        <xliff:g id="update_name">%1$s</xliff:g>.\n\nIf you press
        <xliff:g id="ok">%2$s</xliff:g>, the device will begin installing the update directly
        from the server. A network connection is required throughout the
        installation.\n\nOnce completed, you will be prompted to reboot.</string>
    <string name="cancel_installation_dialog_title">Cancel installation</string>
    <string name="cancel_installation_dialog_message">Cancel the system update?</string>
    <string name="label_download_url">Download URL</string>
    <string name="dialog_export_title">Exporting update</string>
    <string name="notification_export_success">Update exported</string>
    <string name="notification_export_fail">Export error</string>
    <string name="toast_already_exporting">Already exporting an update</string>
    <string name="toast_export_started">Export started</string>
    <plurals name="eta_seconds">
        <item quantity="one">1 sec left</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> secs left</item>
    </plurals>
    <plurals name="eta_minutes">
        <item quantity="one">1 min left</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> mins left</item>
    </plurals>
    <plurals name="eta_hours">
        <item quantity="one">1 hour left</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours left</item>
    </plurals>
    <string name="update_over_metered_network_title">Warning</string>
    <string name="update_over_metered_network_message">You\'re about to download an update package over a metered network which is likely going to cause high data usage. Would you like to proceed?</string>
    <string name="blocked_update_dialog_title">Update blocked</string>
    <string name="blocked_update_dialog_message">This update cannot be installed using the updater app.  Please read <xliff:g id="info_url">%1$s</xliff:g> for more information.</string>
    <string name="blocked_update_info_url" translatable="false">https://wiki.lineageos.org/devices/<xliff:g id="device_name">%1$s</xliff:g>/upgrade/</string>
    <string name="export_channel_title">Export completion</string>
    <string name="new_updates_channel_title">New updates</string>
    <string name="ongoing_channel_title">Ongoing downloads</string>
    <string name="update_failed_channel_title">Update failed</string>
</resources>