<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="24dp"
    android:paddingStart="24dp"
    android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_auto_updates_check"
            android:textAppearance="@*android:style/TextAppearance.DeviceDefault.Subhead"
            android:textColor="?android:attr/textColorPrimary" />

        <Spinner
            android:id="@+id/preferences_auto_updates_check_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_tap_target_size"
            android:entries="@array/menu_auto_updates_check_interval_entries" />
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/preferences_auto_delete_updates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/menu_auto_delete_updates"
        android:textSize="16sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/preferences_metered_network_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/menu_metered_network_warning"
        android:textSize="16sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/preferences_ab_perf_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/menu_ab_perf_mode"
        android:textSize="16sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/preferences_update_recovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/menu_update_recovery"
        android:textSize="16sp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/preferences_schedule_reboot_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="@dimen/min_tap_target_size">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/menu_schedule_reboot_time"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/preferences_schedule_reboot_time_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textColor="?android:attr/textColorSecondary"
            tools:text="2:00 AM" />
    </RelativeLayout>

</LinearLayout>
