<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<com.android.settingslib.widget.DrawableStateLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/update_icon"
        android:layout_width="@dimen/settingslib_expressive_space_medium3"
        android:layout_height="@dimen/settingslib_expressive_space_medium3"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/settingslib_expressive_space_extrasmall6"
        android:importantForAccessibility="no"
        android:scaleType="centerInside"
        android:src="@drawable/ic_download"
        app:tint="?android:attr/colorAccent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settingslib_expressive_space_small1" />

        <TextView
            android:id="@+id/build_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.SettingsLib.TitleMedium.Emphasized"
            tools:text="Jan 30" />

        <TextView
            android:id="@+id/build_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.SettingsLib.BodyMedium"
            tools:text="LineageOS 23.2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settingslib_expressive_space_small1" />

        <LinearLayout
            android:id="@+id/detail_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/settingslib_expressive_space_extrasmall4"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/detail_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.SettingsLib.BodySmall"
                tools:text="Update size: 1.34 GB" />

            <TextView
                android:id="@+id/detail_android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.SettingsLib.BodySmall"
                tools:text="Android version: 16" />

            <TextView
                android:id="@+id/detail_security"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.SettingsLib.BodySmall"
                tools:text="Security update: Jan 5, 2026" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/settingslib_expressive_space_small1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/progress_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/settingslib_expressive_space_extrasmall4"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/progress_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.SettingsLib.HeadlineLarge"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="65%" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_indicator"
                style="@style/Widget.Material3Expressive.LinearProgressIndicator.Wavy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.Material3.DynamicColors.DayNight"
                tools:progress="65" />

            <TextView
                android:id="@+id/progress_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:textAppearance="?android:attr/textAppearanceListItemSecondary"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="162 of 1.1 GB (3 minutes left)" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actions_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/settingslib_expressive_space_extrasmall4"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageButton
                android:id="@+id/button_copy_url"
                style="?android:attr/actionOverflowButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@android:string/copyUrl"
                android:minWidth="48dp"
                android:padding="@dimen/settingslib_expressive_space_extrasmall4"
                android:src="@drawable/ic_link"
                android:visibility="gone"
                tools:visibility="visible" />

            <ImageButton
                android:id="@+id/button_export_update"
                style="?android:attr/actionOverflowButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/menu_export_update"
                android:minWidth="48dp"
                android:padding="@dimen/settingslib_expressive_space_extrasmall4"
                android:src="@drawable/ic_file_export"
                android:visibility="gone"
                tools:visibility="visible" />

            <ImageButton
                android:id="@+id/button_delete_action"
                style="?android:attr/actionOverflowButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/action_delete"
                android:minWidth="48dp"
                android:padding="@dimen/settingslib_expressive_space_extrasmall4"
                android:src="@drawable/ic_delete_forever"
                android:visibility="gone"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/update_action"
                    style="@style/SettingsLibButtonStyle.Expressive.Filled"
                    android:layout_marginStart="@dimen/settingslib_expressive_space_extrasmall2"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:minWidth="0dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    tools:text="Download" />

                <Space
                    android:id="@+id/banner_button_space"
                    android:layout_width="@dimen/settingslib_expressive_space_extrasmall4"
                    android:layout_height="@dimen/settingslib_expressive_space_small1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_action"
                    style="@style/SettingsLibButtonStyle.Expressive.Outline"
                    android:layout_marginStart="@dimen/settingslib_expressive_space_extrasmall2"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:minWidth="0dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:visibility="gone"
                    tools:text="Cancel"
                    tools:visibility="visible" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/expand_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/settingslib_expressive_space_extrasmall4"
        android:contentDescription="@string/action_info"
        android:src="@drawable/settingslib_expressive_icon_expand"
        app:tint="?android:attr/textColorSecondary" />
</com.android.settingslib.widget.DrawableStateLinearLayout>
